css/admin_dashboard.css
html,
body {
    margin: 0;
    padding: 0;
    font-family: 'roboto', sans-serif;
    overflow-x: clip;
}


/*****Navigation Style*****/

.navbar_bg {
    background: white;
    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
}

.signout
{
    position: absolute !important;
    top: 45px;
    right: 80px !important;
    color: #0F2D52 !important;
}

.signout_icon{
    color: #0F2D52 !important;
}

/*****Navigation Style End*****/


/*****Admin Dashboard Style*****/


.admin_cards
{
    width: 270px !important;
    height: 200px !important;
    background: #D8E9FF !important;
    border-radius: 20px !important;
    cursor: pointer;
}

.admin_cards:hover
{
    width: 270px !important;
    height: 200px !important;
    background: #a7cdff !important;
    border-radius: 20px !important;
    cursor: pointer;
}

.admin_dashboard_title, .card_icon {
    color: #0F2D52 !important;
}


/***Checkbox style***/


.modal-form-checkbox input[type="checkbox"] {
    display: none;
    visibility: hidden;
}

.modal-form-checkbox .form-check-label {
    margin: auto;
    margin-bottom: 20px;
    --webkit-user-select: none;
    user-select: none;
    cursor: pointer;
}

.modal-form-checkbox .form-check-label span {
    display: inline-block;
    vertical-align: middle;
    transform: translate3d(0, 0, 0);
}

.modal-form-checkbox .form-check-label span:first-child {
    position: relative;
    width: 18px;
    height: 18px;
    border-radius: 3px;
    transform: scale(1);
    vertical-align: middle;
    border: 1px solid #0F2D52;
    transition: all 0.2s ease;
}

.modal-form-checkbox .form-check-label span:first-child svg {
    position: absolute;
    top: 3px;
    left: 2px;
    fill: none;
    stroke: #FFFFFF;
    stroke-width: 2;
    stroke-linecap: round;
    stroke-linejoin: round;
    stroke-dasharray: 16px;
    stroke-dashoffset: 16px;
}

.modal-form-checkbox .form-check-label span:first-child:before {
    content: "";
    width: 100%;
    height: 100%;
    background: #0F2D52;
    display: block;
    transform: scale(0);
    opacity: 1;
    border-radius: 50%;
}

.modal-form-checkbox .form-check-label span:last-child {
    padding-left: 8px;
}

.modal-form-checkbox .form-check-label:hover span:first-child {
    border-color: #0F2D52;
}

.modal-form-checkbox .input-checkbox:checked+.form-check-label span:first-child {
    background: #0F2D52;
    border-color: #0F2D52;
    animation: wave-46 0.4s ease;
}

.modal-form-checkbox .input-checkbox:checked+.form-check-label span:first-child svg {
    stroke-dashoffset: 0;
}

.modal-form-checkbox .input-checkbox:checked+.form-check-label span:first-child:before {
    transform: scale(3.5);
    opacity: 0;
    transition: all 0.6s ease;
}

@keyframes wave-46 {
    50% {
        transform: scale(0.9);
    }
}

/***Checkbox style end***/

/***Modal style***/

.col-form-label
{
    font-weight: 500;
}
.btn-bg{
    background: #0F2D52 !important;
    border: none !important;
}

.btn-bg:focus
{
    box-shadow: none !important;
}

.btn-bg:hover{
    background-color: #21446f !important;
}

.form-control:focus {
    border-color: #66afe9 !important;
    -webkit-box-shadow: 0 0 8px rgba(102, 175, 233, 0.6) !important;
    box-shadow: 0 0 8px rgba(102, 175, 233, 0.6) !important;
  }

a{
    text-decoration: none !important;
    color:#0F2D52 !important;
}
/* a:hover{
    color:#21446f !important
} */
  /***Modal style End***/



  .active_form_modal
  {
    height: 500px !important;
  }

  .form-multi-select.show
  {
    border-color: #66afe9 !important;
    -webkit-box-shadow: 0 0 8px rgba(102, 175, 233, 0.6) !important;
    box-shadow: 0 0 8px rgba(102, 175, 233, 0.6) !important;
  }

  .form-multi-select-option .form-multi-select-option-with-checkbox .form-multi-selected {
    background-color:#0F2D52 !important;
}

